--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,5 +1,9 @@
 .content {
     max-width: 880px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
 }
 
 @media screen and (max-width: 540px) {
