--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
-    max-width: 100%;
+    max-width: 880px;
     min-height: 74px;
-    margin: 0 200px;
+    margin: 0 200px 40px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
