--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,24 @@
 @import url(../vendor/normalize.css);
 @import url(./font.css);
 @import url(../blocks/page/page.css);
-@import url(../blocks/content/content.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks//profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
+@import url(../blocks/profile/__name-container/profile__name-container.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/places/__card/places__card.css);
+@import url(../blocks/places/__image/places__image.css);
+@import url(../blocks/places/__name/places__name.css);
+@import url(../blocks/places/__name-container/places__name-container.css);
+@import url(../blocks/places/__like/places__like.css);
+
+/* * {
+    border: 1px solid red;
+} */
