--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,8 @@
 @import url(../blocks/places/__name/places__name.css);
 @import url(../blocks/places/__name-container/places__name-container.css);
 @import url(../blocks/places/__like/places__like.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__logo/footer__logo.css);
 
 /* * {
     border: 1px solid red;
