--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
     max-width: 880px;
     min-height: 74px;
-    margin: 0 200px 40px;
+    margin: 0 200px 36.25px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 960px) {
     .header {
-        margin: 0;
+        margin: auto;
         min-height: 56px;
         box-sizing: border-box;
     }
