--- a/blocks/places/__name/places__name.css
+++ b/blocks/places/__name/places__name.css
@@ -2,5 +2,9 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29.05px;
-    color: black
+    color: black;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 224px;
 }
