--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -11,6 +11,13 @@
     background-position: center;
     padding: 0;
     grid-area: add;
+    transition: .5s;
+    align-self: center;
+    cursor: pointer;
+}
+
+.profile__add-button:hover {
+    opacity: 0.6;
 }
 
 @media screen and (max-width: 960px) {
