--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,9 +1,14 @@
 .profile__edit-button {
-    /* background-image: url(../../../images/vector.svg); */
     background-color: transparent;
     border: 1px solid #FFFFFF;
     width: 24px;
     height: 24px;
     padding: 0;
     grid-area: edit;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.profile__edit-button:hover {
+    opacity: 0.6;
 }
