--- a/pages/index.css
+++ b/pages/index.css
@@ -13,14 +13,21 @@
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__name-container/profile__name-container.css);
 @import url(../blocks/places/places.css);
+@import url(../blocks/places/__cards/places__cards.css);
 @import url(../blocks/places/__card/places__card.css);
 @import url(../blocks/places/__image/places__image.css);
 @import url(../blocks/places/__name/places__name.css);
 @import url(../blocks/places/__name-container/places__name-container.css);
 @import url(../blocks/places/__like/places__like.css);
+@import url(../blocks/places/__like/__like_activ/places__like_activ.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__logo/footer__logo.css);
-
-/* * {
-    border: 1px solid red;
-} */
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__name/popup__name.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__contact-info/popup__contact-info.css);
+@import url(../blocks/popup/__self/popup__self.css);
+@import url(../blocks/popup/__save/popup__save.css);
