Учтены замечания 1 ревью

--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -1,14 +1,13 @@
 .popup__name {
     width: 100%;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 16.94px;
     border: 0;
-    height: 27px;
-    border-bottom: 1px solid #bcbcc4;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
     background-color: transparent;
     font-family: inherit;
-    margin-bottom: 30px;
-    padding: 0;
+    /* margin-bottom: 30px; */
+    padding: 0 0 13px 0;
 }
 
 @media screen and (max-width: 960px) {
