--- a/blocks/footer/__logo/footer__logo.css
+++ b/blocks/footer/__logo/footer__logo.css
@@ -1,13 +1,14 @@
 .footer__logo {
-    width: 318px;
-    height: 18px;
-    margin-left: -50px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #545454;
 }
 
 @media screen and (max-width: 960px) {
     .footer__logo {
         padding: 0 19px;
-        width: 282px;
-        height: 14px;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
