--- a/blocks/places/__cards/places__cards.css
+++ b/blocks/places/__cards/places__cards.css
@@ -1,6 +1,7 @@
 .places__cards {
     list-style: none;
     padding: 0;
+    margin: 0;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, 282px);
