--- a/blocks/popup/__contact-info/popup__contact-info.css
+++ b/blocks/popup/__contact-info/popup__contact-info.css
@@ -1,8 +1,9 @@
 .popup__contact-info {
     border: none;
     padding: 0;
-    max-width: 358px;
     margin: 0;
+    max-width: 358px;
+    width: 100%;
 }
 
 @media screen and (max-width: 960px) {
