--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,17 +1,12 @@
 .popup__self {
-    font-size: 14px;
-    line-height: 17px;
-    border: 0;
     width: 100%;
-    height: 27px;
-    border-bottom: 1px solid #bcbcc4;
+    font-size: 14px;
+    line-height: 16.94px;
+    border: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
     background-color: transparent;
     font-family: inherit;
-    margin-bottom: 48px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    padding: 0;
+    padding: 0 0 13px 0;
 }
 
 @media screen and (max-width: 960px) {
