учтены замечания 2 ревью

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,3 +4,9 @@
         padding: 67px 0 0 0;
         margin: auto;
     }
+    
+    @media screen and (max-width: 960px) {
+        .footer {
+            padding: 48px 0 0 0;
+        }
+    }
