--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
     min-height: 74px;
     margin: 0 200px 36.25px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
