--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,6 @@
 .popup__container {
     width: 430px;
-    height: 330px;
+    min-height: 330px;
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
@@ -12,7 +12,7 @@
 @media screen and (max-width: 960px) {
     .popup__container {
         width: 282px;
-        height: 322px;
-        padding: 22px 25px;
+        min-height: 322px;
+        padding: 25px 22px;
     }
 }
