--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -3,6 +3,10 @@
     font-size: 18px;
     line-height: 21.78px;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 336px;
 }
 
 @media screen and (max-width: 960px) {
@@ -11,5 +15,6 @@
         line-height: 16.94px;
         text-align: center;
         margin-bottom: 36px;
+        max-width: 282px;
     }
 }
