--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -4,6 +4,10 @@
     line-height: 48px;
     margin: 0 18px 0 0;
     grid-area: name;
+    max-width: 294px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 960px) {
@@ -11,5 +15,6 @@
         font-size: 27px;
         line-height: 32.68px;
         margin: 0 10px 0 0;
+        max-width: 189px;
     }
 }
