--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,18 +1,18 @@
 .popup__container {
     width: 430px;
-    height: 330px;
+    min-height: 330px;
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     position: relative;
     padding: 34px 36px 37px;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 960px) {
     .popup__container {
         width: 282px;
-        height: 322px;
-        box-sizing: border-box;
-        padding: 22px 25px;
+        min-height: 322px;
+        padding: 25px 22px;
     }
 }
