--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__name {
+.popup__input {
     width: 100%;
     font-size: 14px;
     line-height: 16.94px;
@@ -6,12 +6,11 @@
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     background-color: transparent;
     font-family: inherit;
-    /* margin-bottom: 30px; */
     padding: 0 0 13px 0;
 }
 
 @media screen and (max-width: 960px) {
-    .popup__name {
+    .popup__input {
         font-size: 14px;
         line-height: 17px;
     }
