--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -9,8 +9,19 @@
     border: none;
     transition: .5s;
     padding: 0;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
 }
 
 .popup__save:hover {
     opacity: 0.6;
+}
+
+@media screen and (max-width: 960px) {
+    .popup__save {
+        font-size: 14px;
+        line-height: 17px;
+        height: 46px;
+    }
 }
