--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,10 @@
     bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, .5);
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: .5s;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
