--- a/blocks/popup/__contact-info/popup__contact-info.css
+++ b/blocks/popup/__contact-info/popup__contact-info.css
@@ -1,7 +1,7 @@
 .popup__contact-info {
     border: none;
     padding: 0;
-    margin: 0;
+    margin: 0 0 18px 0;
     max-width: 358px;
     width: 100%;
 }
