--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -7,6 +7,7 @@
     background-color: transparent;
     font-family: inherit;
     padding: 0 0 13px 0;
+    margin-bottom: 5px;
 }
 
 @media screen and (max-width: 960px) {
