--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -14,6 +14,7 @@
         font-size: 14px;
         line-height: 16.94px;
         text-align: center;
+        justify-self: center;
         margin-bottom: 36px;
         max-width: 282px;
     }
