--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -1,9 +1,11 @@
 .popup__error {
+    min-height: 35px;
+    padding-top: 5px;
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
     color: #FF0000;
     display: block;
-    margin-bottom: 13px;
     opacity: 0;
+    box-sizing: border-box;
 }
