--- a/src/blocks/popup/__close/popup__close.css
+++ b/src/blocks/popup/__close/popup__close.css
@@ -1,7 +1,7 @@
 .popup__close {
     width: 32px;
     height: 32px;
-    background: transparent url(../../../images/Close\ Icon.svg);
+    background: transparent url(../../../images/Close_Icon.svg);
     position: absolute;
     top: -40px;
     right: -40px;
@@ -25,6 +25,6 @@
         right: 0;
         object-fit: cover;
         object-position: center;
-        background: url(../../../images/Close\ Icon\ mob.svg);
+        background: url(../../../images/Close_Icon_mob.svg);
     }
 }
