--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,15 +1,12 @@
+
 .profile__avatar {
-    width: 120px;
-    height: 120px;
-    margin-right: 26.25px;
-    grid-area: image;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+  
 }
 
-@media screen and (max-width: 960px) {
-    .profile__avatar {
-        font-size: 27px;
-        line-height: 32.68px;
-        margin: 38.25px 0 22.25px 0;
-        justify-self: center;
-    }
-}
+
