--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,6 +12,8 @@
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__name-container/profile__name-container.css);
+@import url(../blocks/profile/__hover-pen/profile__hover-pen.css);
+@import url(../blocks/profile/__hover-container/profile__hover-container.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/places/__cards/places__cards.css);
 @import url(../blocks/places/__card/places__card.css);
@@ -23,11 +25,16 @@
 @import url(../blocks/places/__name-container/places__name-container.css);
 @import url(../blocks/places/__like/places__like.css);
 @import url(../blocks/places/__like/_activ/places__like_activ.css);
+@import url(../blocks/places/__like-count/places__like-count.css);
+@import url(../blocks/places/__like-container/places__like-container.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__logo/footer__logo.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__container/_form/popup__container_form_confirmation.css);
+@import url(../blocks/popup/__container/_form/popup__container_form_update-avatar.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__title/_form/popup__title_form_confirmation.css);
 @import url(../blocks/popup/__name/popup__name.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__close/popup__close.css);
