--- a/main.css
+++ b/main.css
@@ -4,14 +4,16 @@
 .header{align-items:flex-start;border-bottom:1px solid rgba(84,84,84,.7);display:flex;justify-content:flex-start;margin:0 200px 36.25px;max-width:880px;min-height:74px}@media screen and (max-width:960px){.header{box-sizing:border-box;margin:auto;min-height:56px}}
 .header__logo{height:33px;width:142px}@media screen and (max-width:960px){.header__logo{height:22.4px;padding-left:27px;width:103.74px}}
 .content{align-items:center;display:flex;flex-direction:column;margin:auto;max-width:880px}@media screen and (max-width:540px){.content{max-width:282px}}
-.profile{align-content:space-between;display:grid;grid-template-areas:"image name add" "image self add";grid-template-columns:-webkit-max-content 1fr -webkit-max-content;grid-template-columns:max-content 1fr max-content;grid-template-rows:repeat(2,1fr);margin:0 auto 47.25px;padding:0;row-gap:16px;width:100%}@media screen and (max-width:960px){.profile{grid-template-areas:"image" "name" "self" "add";grid-template-columns:1fr;grid-template-rows:repeat(4,-webkit-min-content);grid-template-rows:repeat(4,min-content);justify-content:center;margin:0 auto;row-gap:0}}
+.profile{align-content:space-between;background-position:50%;background-size:cover;display:grid;grid-template-areas:"image name add" "image self add";grid-template-columns:-webkit-max-content 1fr -webkit-max-content;grid-template-columns:max-content 1fr max-content;grid-template-rows:repeat(2,1fr);margin:0 auto 47.25px;padding:0;row-gap:16px;width:100%}@media screen and (max-width:960px){.profile{grid-template-areas:"image" "name" "self" "add";grid-template-columns:1fr;grid-template-rows:repeat(4,-webkit-min-content);grid-template-rows:repeat(4,min-content);justify-content:center;margin:0 auto;row-gap:0}}
 .profile__edit-button{background-color:transparent;border:1px solid #fff;cursor:pointer;grid-area:edit;height:24px;padding:0;transition:.5s;width:24px}.profile__edit-button:hover{opacity:.6}@media screen and (max-width:960px){.profile__edit-button{height:18px;width:18px}}
 .profile__info{display:flex;flex-direction:column;justify-content:center}
-.profile__avatar{grid-area:image;height:120px;margin-right:26.25px;width:120px}@media screen and (max-width:960px){.profile__avatar{font-size:27px;justify-self:center;line-height:32.68px;margin:38.25px 0 22.25px}}
+.profile__avatar{bottom:0;height:100%;left:0;position:absolute;width:100%;z-index:1}
 .profile__add-button{align-self:center;background-color:transparent;background-image:url(images/plus.d86bb2edc2f6eadb96b7.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;border-radius:2px;box-sizing:border-box;color:#fff;cursor:pointer;grid-area:add;height:50px;padding:0;transition:.5s;width:150px}.profile__add-button:hover{opacity:.6}@media screen and (max-width:960px){.profile__add-button{justify-self:center;margin-bottom:36px;width:282px}}
 .profile__title{font-size:42px;font-weight:500;grid-area:name;line-height:48px;margin:0 18px 0 0;max-width:294px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:960px){.profile__title{font-size:27px;line-height:32.68px;margin:0 10px 0 0;max-width:189px}}
 .profile__subtitle{font-size:18px;font-weight:400;line-height:21.78px;margin:0;max-width:336px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:960px){.profile__subtitle{font-size:14px;justify-self:center;line-height:16.94px;margin-bottom:36px;max-width:282px;text-align:center}}
 .profile__name-container{align-items:flex-end;display:flex;flex-direction:row;flex-wrap:nowrap;grid-area:name}@media screen and (max-width:960px){.profile__name-container{justify-content:center;margin:0 0 14px}}
+.profile__hover-pen{background-color:rgba(0,0,0,.8);background-image:url(images/pen.a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;bottom:0;cursor:pointer;height:100%;left:0;opacity:0;position:absolute;transition:.5s;width:100%;z-index:2}.profile__hover-pen:hover{opacity:1;transition:.5s}
+.profile__hover-container{grid-area:image;height:120px;margin-right:26.25px;position:relative;transition:.4s;width:120px}@media screen and (max-width:960px){.profile__hover-container{font-size:27px;justify-self:center;line-height:32.68px;margin:38.25px 0 22.25px}}
 .places{width:100%}
 .places__cards{-moz-column-gap:17px;column-gap:17px;display:grid;grid-template-columns:repeat(auto-fit,282px);justify-content:center;list-style:none;margin:0;padding:0;row-gap:20px;width:100%}
 .places__card{background:#fff;border-radius:10px;position:relative;width:282px}
@@ -23,13 +25,18 @@
 .places__name-container{align-items:center;display:flex;justify-content:space-between;padding:0 15px 0 21px}
 .places__like{background:transparent url(images/like.87ed371465c7a6a1cd01.svg);border:none;cursor:pointer;height:19px;padding:0;transition:.5s;width:22px}.places__like:hover{opacity:.6}
 .places__like_activ{background:transparent url(images/like_activ.fe17a515669479b1e649.svg)}
+.places__like-count{color:#000;font-size:13px;font-weight:400;line-height:16px;text-align:center}
+.places__like-container{display:flex;flex-direction:column;gap:3px}
 .footer{margin:auto;max-width:880px;min-height:18px;padding:67px 0 0}@media screen and (max-width:960px){.footer{padding:48px 0 0}}
 .footer__logo{color:#545454;font-size:18px;font-weight:400;line-height:22px;margin:0}@media screen and (max-width:960px){.footer__logo{font-size:14px;line-height:17px;padding:0 19px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;display:flex;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:.5s;visibility:hidden}
 .popup__container{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;min-height:330px;padding:34px 36px 37px;position:relative;width:430px}@media screen and (max-width:960px){.popup__container{min-height:322px;padding:25px 22px;width:282px}}
+.popup__container_form_confirmation{min-height:181px}
+.popup__container_form_update-avatar{min-height:272px}
 .popup__title{color:#000;font-size:24px;font-weight:900;line-height:29px;margin:0 0 54px}@media screen and (max-width:960px){.popup__title{font-size:18px;line-height:22px;margin:0 0 75px}}
+.popup__title_form_confirmation{margin-bottom:38px}
 .popup__name{background-color:transparent;border:0;border-bottom:1px solid rgba(0,0,0,.2);font-family:inherit;font-size:14px;line-height:16.94px;padding:0 0 13px;width:100%}@media screen and (max-width:960px){.popup__name{font-size:14px;line-height:17px}}
-.popup_opened{opacity:1;transition:.5s;visibility:visible}
+.popup_opened{opacity:1;transition:.5s;visibility:visible;z-index:3}
 .popup__close{background:transparent url(images/Close_Icon.2ceb783afbab75916ddc.svg);border:none;cursor:pointer;height:32px;-o-object-fit:contain;object-fit:contain;-o-object-position:center;object-position:center;padding:0;position:absolute;right:-40px;top:-40px;transition:.5s;width:32px}.popup__close:hover{opacity:.6}@media screen and (max-width:960px){.popup__close{background:url(images/Close_Icon_mob.b793e07c3f4c19e26c11.svg);height:20px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;right:0;top:-36px;width:20px}}
 .popup__close_type_image{right:-40px;top:-40px}@media screen and (max-width:960px){.popup__close_type_image{height:20px;right:0;top:-36px;width:20px}}
 .popup__contact-info{border:none;margin:0 0 18px;max-width:358px;padding:0;width:100%}@media screen and (max-width:960px){.popup__contact-info{max-width:238px}}
